--- a/sunlatte-spigot/build.gradle
+++ b/sunlatte-spigot/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+    implementation group: 'com.google.inject', name: 'guice', version: '4.0'
 }
 
 processResources {
