--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,13 @@ subprojects {
     repositories {
         mavenCentral()
     }
+
+    dependencies {
+        implementation 'org.projectlombok:lombok:1.18.26'
+        annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+        implementation 'com.google.inject:guice:5.1.0'
+    }
 }
 
 repositories {
