--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://repo.unnamed.team/repository/unnamed-public/" }
     }
 
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
         classpath 'com.google.inject:guice:4.0'
+        classpath 'me.yushust.message:core:7.1.3'
     }
 }
 
@@ -28,6 +30,7 @@ subprojects {
 
     repositories {
         mavenCentral()
+        maven { url "https://repo.unnamed.team/repository/unnamed-public/" }
     }
 
     dependencies {
@@ -35,6 +38,7 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
         implementation 'com.google.inject:guice:5.1.0'
+        implementation 'me.yushust.message:core:7.1.3'
     }
 }
 
