--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        mavenLocal()
         maven { url "https://repo.unnamed.team/repository/unnamed-public/" }
     }
 
@@ -8,6 +10,7 @@ buildscript {
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
         classpath 'com.google.inject:guice:4.0'
         classpath 'me.yushust.message:core:7.1.3'
+        classpath 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
     }
 }
 
@@ -30,6 +33,7 @@ subprojects {
 
     repositories {
         mavenCentral()
+        mavenLocal()
         maven { url "https://repo.unnamed.team/repository/unnamed-public/" }
     }
 
@@ -39,6 +43,7 @@ subprojects {
 
         implementation 'com.google.inject:guice:5.1.0'
         implementation 'me.yushust.message:core:7.1.3'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
     }
 }
 
