--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.google.inject:guice:4.0'
         classpath 'me.yushust.message:core:7.1.3'
         classpath 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
+        classpath 'com.github.ben-manes.caffeine:caffeine:3.1.6'
     }
 }
 
@@ -44,6 +45,7 @@ subprojects {
         implementation 'com.google.inject:guice:5.1.0'
         implementation 'me.yushust.message:core:7.1.3'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
+        implementation 'com.github.ben-manes.caffeine:caffeine:3.1.6'
     }
 }
 
